--- a/package.json
+++ b/package.json
@@ -40,11 +40,17 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.2",
+    "prettier": "^2.1.2",
     "tailwindcss": "^1.8.4"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "postcss.config.js",
-  "keywords": [],
+  "keywords": [
+    "pokemon",
+    "react",
+    "tailwindcss",
+    "tailwind"
+  ],
   "author": "Raul Luis <soyrauluis@gmail.com>",
   "license": "ISC"
 }
